syntax = "proto3";
package hello;

service HelloService {
  rpc say_hello (HelloRequest) returns (HelloResponse) {}
  rpc say_hello_stream (HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
